text overflow problem fixed

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -50,6 +50,11 @@ body { padding-top: 70px; }
     max-width:50px;
 }
 
+.text{
+  word-wrap: break-word;
+
+}
+
 .truncate {
   white-space: nowrap;
   overflow: hidden;
